--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 members = [
     "shua_struct_macro",
     "shua_struct",
+    "script",
     "app"
 ]
 resolver = "3"
+
+[profile.release]
+opt-level = 3
+strip = "debuginfo"
+lto = true
