--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,5 +11,5 @@ bitvec = "1.0.1"
 shua_struct_macro = { path = "../shua_struct_macro" }
 shua_struct = { path = "../shua_struct" }
 serde = { version = "1", features = ["derive"] }
-serde_json = "1.0.145"
 base64 = "0.22.1"
+rmp-serde = "1.3.0"
