--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,5 +11,9 @@ bitvec = "1.0.1"
 shua_struct_macro = { path = "../shua_struct_macro" }
 shua_struct = { path = "../shua_struct" }
 serde = { version = "1", features = ["derive"] }
-base64 = "0.22.1"
-rmp-serde = "1.3.0"
+rmp-serde = { version = "1.3.0", optional = true }
+
+
+[features]
+default = []
+c_abi = ["rmp-serde"]
