--- a/shua_struct_macro/Cargo.toml
+++ b/shua_struct_macro/Cargo.toml
@@ -8,5 +8,5 @@ proc-macro = true
 
 [dependencies]
 quote = "1.0.42"
-syn = { version = "2", features = ["extra-traits", "fold", "full", "visit"] }
-proc-macro2 = { version = "1.0.53", features = ["span-locations"] }
+syn = "2"
+proc-macro2 = "1.0.53"
