--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -8,8 +8,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 bitvec = "1.0.1"
-shua_struct_macro = { path = "../shua_struct_macro" }
-shua_struct = { path = "../shua_struct" }
+shua_struct_macro = { version = "0.1.0" }
+shua_struct = { version = "0.1.0", features = ["all"] }
 serde = { version = "1", features = ["derive"] }
 rmp-serde = { version = "1.3.0", optional = true }
 
