--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -2,6 +2,10 @@
 name = "phi_save_codec"
 version = "0.1.0"
 edition = "2024"
+authors = ["Shua <CHA_Shua@outlook.com>"]
+license = "MIT"
+repository = "https://github.com/Shua-github/Phi-Save-Codec"
+description = "Phigros Cloud Save Codec Library"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
